# essential-takehome

./: .env  .gitignore  README.md  cli.py  pyproject.toml  question.json  questions.jsonl
essential_takehome/: chain.py  chains.py  files.py  llm.py  prompts.py  tools.py
essential_takehome/answers/: 2_top_5_colors.txt  3_most_common_color.txt  4_top_customer_and_frequency.txt  5_browse_before_purchase.txt  6_most_common_sizes.txt  7_session_and_product_trends.txt  8_season_average_spend.txt
essential_takehome/questions/: __init__.py
essential_takehome/templates/: analyst_prompt.jinja  gpt_instructions.jinja  judge_prompt.jinja
notebooks/: 1_most_sold_month.ipynb  2_top_5_colors.ipynb  3_most_common_color.ipynb  4_top_customer_and_frequency.ipynb  5_browse_before_purchase.ipynb  6_most_common_sizes.ipynb  7_session_and_product_trends.ipynb  8_season_average_spend.ipynb  explorer.ipynb
